--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Golden Retriever - The Perfect Family Dog</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYDTQ5YSBK"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'YOUR-GA-ID');
+        gtag('config', 'G-ZYDTQ5YSBK');
     </script>
 </head>
 <body>
