Trigger redeploy: force Vercel to update with image

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <main>
         <section class="hero">
+            <!-- Trigger redeploy: Golden Retriever image should now be visible -->
             <img src="images/golden-retriever.jpg" alt="Golden Retriever playing in a field" class="hero-image">
             <div class="hero-content">
                 <h2>Meet the Golden Retriever</h2>
