Forzar despliegue: agregar línea en el footer

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2024 Golden Retriever Website. All rights reserved.</p>
+            <p>Despliegue forzado para ver la imagen 🐾</p>
             <div class="social-links">
                 <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
                 <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
