Fix: add golden retriever image with new name and update HTML

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section class="hero">
             <!-- Trigger redeploy: Golden Retriever image should now be visible -->
-            <img src="images/golden-retriever.jpg" alt="Golden Retriever playing in a field" class="hero-image">
+            <img src="images/golden-retriever2.jpg" alt="Golden Retriever playing in a field" class="hero-image">
             <div class="hero-content">
                 <h2>Meet the Golden Retriever</h2>
                 <p>Known for their friendly, tolerant attitudes and intelligence, Golden Retrievers are one of the most popular dog breeds in the world.</p>
