fix: ajustes finales de imagen y tarjetas para despliegue correcto

--- a/index.html
+++ b/index.html
@@ -52,20 +52,26 @@
         </section>
 
         <section class="features">
-            <div class="feature">
-                <i class="fas fa-home feature-icon"></i>
-                <h3>Family Friendly</h3>
-                <p>Excellent with children and other pets, making them the perfect addition to any family.</p>
+            <div class="feature-card">
+                <i class="fas fa-home feature-icon-large"></i>
+                <div class="feature-info">
+                    <h3>Family Friendly</h3>
+                    <p>Excellent with children and other pets, making them the perfect addition to any family.</p>
+                </div>
             </div>
-            <div class="feature">
-                <i class="fas fa-graduation-cap feature-icon"></i>
-                <h3>Intelligent</h3>
-                <p>Easy to train and eager to please, they excel in obedience and agility training.</p>
+            <div class="feature-card">
+                <i class="fas fa-graduation-cap feature-icon-large"></i>
+                <div class="feature-info">
+                    <h3>Intelligent</h3>
+                    <p>Easy to train and eager to please, they excel in obedience and agility training.</p>
+                </div>
             </div>
-            <div class="feature">
-                <i class="fas fa-hiking feature-icon"></i>
-                <h3>Active</h3>
-                <p>Great companions for outdoor activities, always ready for adventure and play.</p>
+            <div class="feature-card">
+                <i class="fas fa-hiking feature-icon-large"></i>
+                <div class="feature-info">
+                    <h3>Active</h3>
+                    <p>Great companions for outdoor activities, always ready for adventure and play.</p>
+                </div>
             </div>
         </section>
     </main>
